# faostat-pipeline

./: .gitignore  config.yaml  pyproject.toml  requirements.txt
faostat_pipeline/: __init__.py  __main__.py  cleaner.py  cli.py  client.py  endpoints.py  exporter.py  pipeline.py  spinner.py
